@@ -698,7 +698,7 @@ sub AUTOLOAD {
 $initmem = $initmem || 4000000;		# How much memory for the stack
 $initprimes = $initprimes || 500000;	# Calculate primes up to this number
 
-$VERSION = 0.92;
+$VERSION = 0.93;
 
 bootstrap Math::Pari;
 
